Calculating averages for population and exchange rates
Instead of only using the latest population amount and currency exchange rates, calculates the average over the last 30 days of fetched data.

--- a/countries.html
+++ b/countries.html
@@ -77,9 +77,9 @@
 <div class="text-muted">Capital: Washington, D.C.</div>
 </div>
 </section><h2>Information & statistics</h2><div class="table-responsive"><table class="table table-striped">
-<thead><tr><th>#</th><th>Name</th><th>Calling code</th><th>Capital</th><th>Currency code</th></tr></thead>
+<thead><tr><th>#</th><th>Name</th><th>Calling code</th><th>Capital</th><th>Population</th><th>Currency code</th></tr></thead>
 <tbody>
-<tr><td>1</td><td>Australia</td><td>+61</td><td>Canberra</td><td><a href="rates.html#AUD">AUD</a></td></tr><tr><td>2</td><td>Brazil</td><td>+55</td><td>Brasília</td><td><a href="rates.html#BRL">BRL</a></td></tr><tr><td>3</td><td>China</td><td>+86</td><td>Beijing</td><td><a href="rates.html#CNY">CNY</a></td></tr><tr><td>4</td><td>United Kingdom of Great Britain and Northern Ireland</td><td>+44</td><td>London</td><td><a href="rates.html#GBP">GBP</a></td></tr><tr><td>5</td><td>United States of America</td><td>+1</td><td>Washington, D.C.</td><td><a href="rates.html#USD">USD</a></td></tr>              </tbody>
+<tr><td>1</td><td>Australia</td><td>+61</td><td>Canberra</td><td>24058680</td><td><a href="rates.html#AUD">AUD</a></td></tr><tr><td>2</td><td>Brazil</td><td>+55</td><td>Brasília</td><td>206135893</td><td><a href="rates.html#BRL">BRL</a></td></tr><tr><td>3</td><td>China</td><td>+86</td><td>Beijing</td><td>1377422166</td><td><a href="rates.html#CNY">CNY</a></td></tr><tr><td>4</td><td>United Kingdom of Great Britain and Northern Ireland</td><td>+44</td><td>London</td><td>65110000</td><td><a href="rates.html#GBP">GBP</a></td></tr><tr><td>5</td><td>United States of America</td><td>+1</td><td>Washington, D.C.</td><td>323947000</td><td><a href="rates.html#USD">USD</a></td></tr>              </tbody>
             </table>
           </div>
         </main>
