--- a/rates.html
+++ b/rates.html
@@ -40,21 +40,21 @@
 		<div class="row">			
 			<main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
 				<h1>Exchange rates</h1></section><div class="table-responsive"><table class="table table-striped">
-<thead><tr><th id="AUD" colspan="4">AUD</th></tr><tr><th>#</th><th>Exchange rate</th><th>Value</th><th>Date</th></tr></thead>
+<thead><tr><th id="AUD" colspan="4">AUD</th></tr><tr><th>#</th><th>Exchange rate</th><th>Value</th></tr></thead>
 <tbody>
-<tr><td>1</td><td>AUD/BRL</td><td>2.5621</td><td>2017-12-25</td></tr><tr><td>2</td><td>AUD/USD</td><td>0.77178</td><td>2017-12-25</td></tr><tr><td>3</td><td>AUD/GBP</td><td>0.57669</td><td>2017-12-25</td></tr><tr><td>4</td><td>AUD/CNY</td><td>5.0752</td><td>2017-12-25</td></tr></section><div class="table-responsive"><table class="table table-striped">
-<thead><tr><th id="BRL" colspan="4">BRL</th></tr><tr><th>#</th><th>Exchange rate</th><th>Value</th><th>Date</th></tr></thead>
+<tr><td>1</td><td>AUD/BRL</td><td>2.5311</td></tr><tr><td>2</td><td>AUD/USD</td><td>0.7718</td></tr><tr><td>3</td><td>AUD/GBP</td><td>0.5767</td></tr><tr><td>4</td><td>AUD/CNY</td><td>5.0752</td></tr></section><div class="table-responsive"><table class="table table-striped">
+<thead><tr><th id="BRL" colspan="4">BRL</th></tr><tr><th>#</th><th>Exchange rate</th><th>Value</th></tr></thead>
 <tbody>
-<tr><td>5</td><td>BRL/USD</td><td>0.30123</td><td>2017-12-25</td></tr><tr><td>6</td><td>BRL/AUD</td><td>0.3903</td><td>2017-12-25</td></tr><tr><td>7</td><td>BRL/GBP</td><td>0.22508</td><td>2017-12-25</td></tr><tr><td>8</td><td>BRL/CNY</td><td>1.9809</td><td>2017-12-25</td></tr></section><div class="table-responsive"><table class="table table-striped">
-<thead><tr><th id="CNY" colspan="4">CNY</th></tr><tr><th>#</th><th>Exchange rate</th><th>Value</th><th>Date</th></tr></thead>
+<tr><td>5</td><td>BRL/USD</td><td>0.3012</td></tr><tr><td>6</td><td>BRL/AUD</td><td>0.3903</td></tr><tr><td>7</td><td>BRL/GBP</td><td>0.2251</td></tr><tr><td>8</td><td>BRL/CNY</td><td>1.9809</td></tr></section><div class="table-responsive"><table class="table table-striped">
+<thead><tr><th id="CNY" colspan="4">CNY</th></tr><tr><th>#</th><th>Exchange rate</th><th>Value</th></tr></thead>
 <tbody>
-<tr><td>9</td><td>CNY/BRL</td><td>0.50483</td><td>2017-12-25</td></tr><tr><td>10</td><td>CNY/USD</td><td>0.15207</td><td>2017-12-25</td></tr><tr><td>11</td><td>CNY/AUD</td><td>0.19704</td><td>2017-12-25</td></tr><tr><td>12</td><td>CNY/GBP</td><td>0.11363</td><td>2017-12-25</td></tr></section><div class="table-responsive"><table class="table table-striped">
-<thead><tr><th id="GBP" colspan="4">GBP</th></tr><tr><th>#</th><th>Exchange rate</th><th>Value</th><th>Date</th></tr></thead>
+<tr><td>9</td><td>CNY/BRL</td><td>0.5048</td></tr><tr><td>10</td><td>CNY/USD</td><td>0.1521</td></tr><tr><td>11</td><td>CNY/AUD</td><td>0.1970</td></tr><tr><td>12</td><td>CNY/GBP</td><td>0.1136</td></tr></section><div class="table-responsive"><table class="table table-striped">
+<thead><tr><th id="GBP" colspan="4">GBP</th></tr><tr><th>#</th><th>Exchange rate</th><th>Value</th></tr></thead>
 <tbody>
-<tr><td>13</td><td>GBP/BRL</td><td>4.4428</td><td>2017-12-25</td></tr><tr><td>14</td><td>GBP/USD</td><td>1.3383</td><td>2017-12-25</td></tr><tr><td>15</td><td>GBP/AUD</td><td>1.734</td><td>2017-12-25</td></tr><tr><td>16</td><td>GBP/CNY</td><td>8.8006</td><td>2017-12-25</td></tr></section><div class="table-responsive"><table class="table table-striped">
-<thead><tr><th id="USD" colspan="4">USD</th></tr><tr><th>#</th><th>Exchange rate</th><th>Value</th><th>Date</th></tr></thead>
+<tr><td>13</td><td>GBP/BRL</td><td>4.4428</td></tr><tr><td>14</td><td>GBP/USD</td><td>1.3383</td></tr><tr><td>15</td><td>GBP/AUD</td><td>1.7340</td></tr><tr><td>16</td><td>GBP/CNY</td><td>8.8006</td></tr></section><div class="table-responsive"><table class="table table-striped">
+<thead><tr><th id="USD" colspan="4">USD</th></tr><tr><th>#</th><th>Exchange rate</th><th>Value</th></tr></thead>
 <tbody>
-<tr><td>17</td><td>USD/BRL</td><td>3.3198</td><td>2017-12-25</td></tr><tr><td>18</td><td>USD/AUD</td><td>1.2957</td><td>2017-12-25</td></tr><tr><td>19</td><td>USD/GBP</td><td>0.74722</td><td>2017-12-25</td></tr><tr><td>20</td><td>USD/CNY</td><td>6.576</td><td>2017-12-25</td></tr>              </tbody>
+<tr><td>17</td><td>USD/BRL</td><td>3.3198</td></tr><tr><td>18</td><td>USD/AUD</td><td>1.2957</td></tr><tr><td>19</td><td>USD/GBP</td><td>0.7472</td></tr><tr><td>20</td><td>USD/CNY</td><td>6.5760</td></tr>              </tbody>
             </table>
           </div>
         </main>
